--- a/starrocks/fe/Dockerfile
+++ b/starrocks/fe/Dockerfile
@@ -1,5 +1,8 @@
 FROM 10.150.30.17:28080/ops/centos7-jdk8
 
+#时区设置
+RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo Asia/Shanghai > /etc/timezone
+
 ADD fe /starrocks/fe
 
 ENV JVM_OPTS='-Xmx1024m'
