--- a/starrocks/be/be-1.yml
+++ b/starrocks/be/be-1.yml
@@ -1,30 +1,12 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: starrocks-be
-  labels:
-    app: starrocks-be
-spec:
-  selector:
-    app: starrocks-be
-  ports:
-  - name: be-9050
-    port: 9050
-    targetPort: 9050
----
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
-  name: starrocks-be
+  name: starrocks-be-1
 spec:
   selector:
     matchLabels:
       app: starrocks-be
-  serviceName: starrocks-be
-  replicas: 3 
-  updateStrategy:
-    type: RollingUpdate
-  podManagementPolicy: Parallel
+  replicas: 1 
   template:
     metadata:
       labels:
@@ -37,8 +19,10 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: starrocks-be
-                operator: Exists
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                - cn-beijing.172.16.0.79
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
@@ -46,8 +30,9 @@ spec:
                   - key: "app"
                     operator: In
                     values:
-                    - starrocks-be
+                    - starrocks-be 
               topologyKey: "kubernetes.io/hostname"
+      hostNetwork: true
       containers:
       - name: starrocks-be
         imagePullPolicy: Always
@@ -91,25 +76,9 @@ spec:
           items:
           - key: be.conf
             path: be.conf
-      
-  volumeClaimTemplates:
-  - metadata:
-      name: be-data
-      labels: 
-        app: starrocks-be
-    spec:
-      storageClassName: local-storage
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 10Gi
-  - metadata:
-      name: be-log
-      labels: 
-        app: starrocks-be
-    spec:
-      storageClassName: local-storage
-      accessModes: [ "ReadWriteOnce" ]
-      resources:
-        requests:
-          storage: 10Gi
+      - name: be-data
+        hostPath:
+          path: /data/starrocks-be/data
+      - name: be-log
+        hostPath:
+          path: /data/starrocks-be/log     
