--- a/spark/spark-worker.yml
+++ b/spark/spark-worker.yml
@@ -24,10 +24,8 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: app
-                operator: In
-                values:
-                - middleware
+              - key: spark
+                operator: Exists
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
