--- a/starrocks/fe/fe-1.yml
+++ b/starrocks/fe/fe-1.yml
@@ -37,7 +37,7 @@ spec:
       hostNetwork: true
       containers:
       - name: starrocks-fe
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         image: 10.150.30.17:28080/ops/starrocks-fe:2.1.3
         resources:
           requests:
