--- a/minio/minio.yml
+++ b/minio/minio.yml
@@ -49,6 +49,13 @@ spec:
         - containerPort: 9000
         # These volume mounts are persistent. Each pod in the PetSet
         # gets a volume mounted based on this field.
+        resources:
+          requests:
+            cpu: 0.1
+            memory: "300Mi"
+          limits:
+            cpu: 0.2
+            memory: "500Mi"
         volumeMounts:
         - name: minio-data
           mountPath: /data
