--- a/streamx/Dockerfile
+++ b/streamx/Dockerfile
@@ -3,16 +3,15 @@ FROM openjdk:8-jdk-alpine
 # 时区设置为上海时区
 RUN sed -i "s@dl-cdn.alpinelinux.org@mirrors.aliyun.com@g" /etc/apk/repositories \
     && apk add tzdata curl bash docker && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime \
-    && echo "Asia/Shanghai" > /etc/timezone && rc-update add docker boot \
-    && apk del tzdata
+    && echo "Asia/Shanghai" > /etc/timezone && apk del tzdata
 
 
-ADD streamx-console-service-1.2.3 /opt/streamx-console-service-1.2.3
+ADD streamx-console-service-1.2.4 /opt/streamx-console-service-1.2.4
 ADD flink-1.13.6 /opt/soft/flink-1.13.6
 ADD kubectl /usr/local/bin/kubectl
 
 
-RUN ln -s /opt/streamx-console-service-1.2.3 /opt/streamx && chmod +x /usr/local/bin/kubectl
+RUN ln -s /opt/streamx-console-service-1.2.4 /opt/streamx && chmod +x /usr/local/bin/kubectl
 
 ENV DB_HOST='' \
     DB_PORT=3306 \
