--- a/starrocks/be/be-2.yml
+++ b/starrocks/be/be-2.yml
@@ -39,9 +39,10 @@ spec:
         image: 10.150.30.17:28080/ops/starrocks-be:2.1.3
         resources:
           requests:
+            cpu: "0.5"
             memory: "1Gi"
-            cpu: "0.5" 
           limits:
+            cpu: 2
             memory: "4Gi"
         ports:
         - containerPort: 9060
