--- a/starrocks/fe/fe-1.yml
+++ b/starrocks/fe/fe-1.yml
@@ -41,9 +41,10 @@ spec:
         image: 10.150.30.17:28080/ops/starrocks-fe:2.1.3
         resources:
           requests:
+            cpu: "0.5"
             memory: "1Gi"
-            cpu: "0.5" 
           limits:
+            cpu: 2
             memory: "4Gi"
         env: 
         - name: JVM_OPTS
