--- a/minio/minio.yml
+++ b/minio/minio.yml
@@ -36,9 +36,9 @@ spec:
         imagePullPolicy: IfNotPresent
         image: minio/minio
         env:
-        - name: MINIO_ACCESS_KEY
+        - name: MINIO_ROOT_USER
           value: "admin123"
-        - name: MINIO_SECRET_KEY
+        - name: MINIO_ROOT_PASSWORD
           value: "admin123"
         
         command:
